changes to layout of results page/storybook. Resizing no longer causes overlap. Scroll added to text.

--- a/frontend/src/components/image/image.css
+++ b/frontend/src/components/image/image.css
@@ -1,23 +1,9 @@
-/* .story {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    position: relative;
-  } */
-
-.story-image {
-  width:100%;
-  height:100%;
-  object-fit:cover;
+.image-container {
+  display: flex;
+  /* align-items: right; */
+  justify-content: right;
 }
 
-/* .story::before {
-  content: "";
-  position: absolute;
-  top: 10px;
-  bottom: 10px;
-  left: 0;
-  right: 0;
-  z-index: -1;
-} */
+.story-image {
+  height: 400px;
+}
