--- a/frontend/src/components/story/Story.css
+++ b/frontend/src/components/story/Story.css
@@ -6,11 +6,22 @@
     font-family: Helvetica, Arial, sans-serif;
     text-align: center;
     font-weight: bold;
-    font-size: 1.4vw;
-    padding-left: 2%;
-    padding-right: 2%;
-    padding-top: 2%;
-    padding-bottom: 2%;
+    font-size: 30px;
 }
   
+.story-container {
+    align-items: baseline;
+    padding: 10px;
+    background: rgb(204, 204, 204);
+    background: rgba(204, 204, 204, 0.5);
+    overflow-y: scroll;
+    height: 380px;
+    width: 100%;
+    display: flex;
+    /* align-items: start; */
+    /* justify-content: left; */
+  }
 
+  .story-container::-webkit-scrollbar {
+    display: none;
+  }
